--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,6 +48,10 @@
     ]
   },
   "devDependencies": {
+    "@eslint/js": "^9.10.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.36.1",
+    "globals": "^15.9.0",
     "tailwindcss": "^3.2.7"
   }
 }
