--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,8 @@
     "react-router-dom": "^6.9.0",
     "react-scripts": "^5.0.1",
     "styled-components": "^5.3.9",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webpack-dev-server": "4.15.0"
   },
   "scripts": {
     "start": "react-scripts start",
